--- a/SQLAlchemy.ipynb
+++ b/SQLAlchemy.ipynb
@@ -6,7 +6,7 @@
       "name": "SQLAlchemy.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP+VoXkav/PCs7nnVTX6wOH",
+      "authorship_tag": "ABX9TyMmPrFyd1/kQTOmwxvQz8aO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
       "cell_type": "markdown",
       "source": [
         "# **SQLAlchemy**\n",
-        "Importamos de la libreria SQLAlchemy, los tipos de base de datos, el formato de los campos, operaciones crud y los elementos de la base de datos.\n"
+        "Importamos de la libreria SQLAlchemy, los tipos de base de datos, el formato de los campos, operaciones CRUD y los elementos de la base de datos.\n"
       ],
       "metadata": {
         "id": "qryXyag4qddo"
@@ -178,7 +178,7 @@
         "Conectamos a la base de datos.\n",
         "\n",
         "\n",
-        "> With nos permine abrir la conexion y cerrarla automaticamente\n",
+        "> With nos permite abrir la conexión y cerrarla automaticamente\n",
         "\n"
       ],
       "metadata": {
@@ -243,7 +243,7 @@
         "Conectamos a la base de datos.\n",
         "\n",
         "\n",
-        "> With nos permine abrir la conexion y cerrarla automaticamente\n",
+        "> With nos permite abrir la conexión y cerrarla automaticamente\n",
         "\n"
       ],
       "metadata": {
