--- a/SQLAlchemy.ipynb
+++ b/SQLAlchemy.ipynb
@@ -6,7 +6,7 @@
       "name": "SQLAlchemy.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMmPrFyd1/kQTOmwxvQz8aO",
+      "authorship_tag": "ABX9TyOyGMFfM+DVBEEKRKZjUhQ4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "VtZn7kgCkCMy"
       },
@@ -55,7 +55,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Indicamos la base de datos que ocuparemos y pasaremos parametros como el nombre del archivo donde se almacenara"
+        "Indicamos la conexion a la base de datos que ocuparemos y pasaremos parametros como el nombre del archivo donde se almacenara"
       ],
       "metadata": {
         "id": "rwHxmE9qrtKh"
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "V0eBmBBFmqMu"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "8sRvFT_unuRo"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "Mc_wUGGsone3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +134,7 @@
       "metadata": {
         "id": "0BF2TWxaopji"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
         "id": "N1OI_e77pCAj",
         "outputId": "ac4281ec-bce6-456d-ff53-191d9642e26e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "pkvYj4zIpJT_"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
         "id": "KLsL32b1pKKD",
         "outputId": "5b325d14-753b-4e64-ff01-f81dd30a96ce"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
       "metadata": {
         "id": "ST4eu7BvpTk7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
         "id": "-VRyGYZNpayS",
         "outputId": "2ecd5854-d77e-4205-8d12-276eeedb1363"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +322,7 @@
         "id": "Szsd20w9pgbV",
         "outputId": "897bdad4-66ff-4a23-9865-08e7e124bd61"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
